# AutoMl-CodeGen

./: .gitignore  CONTRIBUTING.md  Dockerfile  ENHANCED_USAGE_GUIDE.md  FINAL_STATUS.md  GITHUB_SETUP.md  HONEST_RESULTS.md  HOW_IT_WORKS.md  LICENSE  Makefile  PROJECT_COMPLETION_SUMMARY.md  PROJECT_DETAILS.md  PROJECT_SUMMARY.md  README.md  README_KARPATHY.md  TESTING_SUMMARY.md  TEST_RESULTS_SUMMARY.md  config.yaml  demo.py  demo_working_functionality.py  example.py  generate.py  nanonas.py  nas_insights.py  pyproject.toml  requirements.txt  setup.py  simple_test.py  test_complete_system.py  test_final_integration.py  test_fixed_performance.py  test_nano_nas.py  test_package.py  train.py  train_model.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
checkpoints/: README.md
data/examples/: sample_dataset.py
deployment/docker/: Dockerfile.prod
docs/: API_REFERENCE.md  index.md  mkdocs.yml
examples/: 01_quick_start.py  02_benchmarking.py  03_architecture_visualization.py  basic_example.py  complete_example.py  enhanced_nas_demo.py  quickstart.py
experiments/experiment_1748855678/logs/: automl_codegen_structured.jsonl
experiments/experiment_1748855702/logs/: automl_codegen_structured.jsonl
experiments/experiment_1748855728/logs/: automl_codegen_structured.jsonl
experiments/experiment_1748855790/logs/: automl_codegen_structured.jsonl
experiments/experiment_1748855822/: final_results.pkl  results.json
experiments/experiment_1748855822/logs/: automl_codegen_structured.jsonl
nanonas/: __init__.py  api.py  cli.py  educational.py  server.py
nanonas/codegen/: __init__.py
nanonas/configs/: experiment_configs.yaml
nanonas/core/: __init__.py  architecture.py  base.py  config.py
nanonas/deployment/: __init__.py  production.py
nanonas/models/: __init__.py  networks.py  operations.py  supernet.py
nanonas/search/: __init__.py  bayesian_optimization.py  darts.py  ensemble.py  evolutionary.py  multiobjective.py  pc_darts.py  progressive_darts.py  random_search.py
nanonas/utils/: __init__.py  advanced_training.py  data_utils.py  hardware_utils.py  logging_utils.py  profiling.py  reproducibility.py  training.py
nanonas/visualization/: __init__.py  architecture_viz.py  interactive_dashboard.py
nas_results/logs/: automl_codegen_structured.jsonl
results/: experimental_results.md
scripts/: setup_github.sh
src/automl_codegen/: __init__.py
src/automl_codegen/codegen/: __init__.py  generator.py
src/automl_codegen/codegen/generators/: pytorch_gen.py
src/automl_codegen/datasets/: loaders.py
src/automl_codegen/evaluation/: __init__.py  hardware.py  trainer.py
src/automl_codegen/search/: __init__.py  nas.py
src/automl_codegen/search/algorithms/: __init__.py  darts.py  evolutionary.py  reinforcement.py
src/automl_codegen/search/objectives/: __init__.py  multi_objective.py
src/automl_codegen/search/space/: __init__.py  search_space.py
src/automl_codegen/utils/: __init__.py  build_info.py  config.py  logger.py  monitoring.py  profiler.py  visualization.py
tests/: test_basic.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_search.py
